// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: Image ImageCircle renders 1`] = `
<Fragment>
  <h2
    id="image-circle"
  >
    Image circle
  </h2>
  <p>
    To make your image a perfect circle add 
    <Tag
      code={true}
      text=".img-circle"
      type="secondary"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <img
      className="img-circle mx-auto d-block"
      src="https://picsum.photos/200?image=790"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: Image ImageFluid renders 1`] = `
<Fragment>
  <h2
    id="image-fluid"
  >
    Image fluid
  </h2>
  <p>
    <Tag
      code={true}
      text=".img-fluid"
      type="secondary"
    />
     makes your images responsive by forcing the picture to scale with its parent.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <img
      className="img-fluid"
      src="https://picsum.photos/1000/250?image=937"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: Image ImageRounded renders 1`] = `
<Fragment>
  <h2
    id="image-rounded"
  >
    Image rounded
  </h2>
  <p>
    If you want to display your images with rounded corners just add 
    <Tag
      code={true}
      text=".img-rounded"
      type="secondary"
    />
     to your image
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <img
      className="img-rounded mx-auto d-block"
      src="https://picsum.photos/200?image=770"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: Image ImageThumbnail renders 1`] = `
<Fragment>
  <h2
    id="image-thumbnail"
  >
    Image thumbnail
  </h2>
  <p>
    <Tag
      code={true}
      text=".img-thumbnail"
      type="secondary"
    />
     adds a small border around the image and adds some padding to give the image a frame.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <img
      className="img-thumbnail mx-auto d-block"
      src="https://picsum.photos/200?image=823"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: Image renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Use our image utilties to modify how they are displayed or work when resized.
  </p>
  <ImageFluid />
  <ImageRounded />
  <ImageCircle />
  <ImageThumbnail />
</DocContainer>
`;
